--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,43 +1,43 @@
-<footer id="footer-color" class="page-footer font-small blue pt-4">
-  <div class="container">
+<footer id="footer-color" class="page-footer font-small blue p-4 mt-3">
+  <div id="div-adjust" class="container container-footer">
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <h4> Réseaux sociaux </h4>
+        <h4 class="underline full-title">Réseaux sociaux</h4>
         <ul class="list-unstyled">
           <li>
             <i class="fab fa-facebook-square"></i>
-            <a href="https://www.facebook.com/LatelierdesNouveauxDesigns/">Facebook</a>
+            <a class="text-white" href="https://www.facebook.com/LatelierdesNouveauxDesigns/">Facebook</a>
           </li>
           <li>
             <i class="fab fa-linkedin"></i>
-            <a href="https://www.linkedin.com/company/atelier-des-nouveaux-designs/">Linkedin</a>
+            <a class="text-white" href="https://www.linkedin.com/company/atelier-des-nouveaux-designs/">Linkedin</a>
           </li>
         </ul>
       </div>
 
       <div class="col-md-4 col-sm-12">
-				<h4> A propos </h4>
+				<h4 class="underline"> A propos </h4>
 				<ul class="list-unstyled">
           <li>
-            <a href="#!">Devenir créateur</a>
+            <a class="text-white" href="#!">Devenir créateur</a>
           </li>
           <li>
-            <a href="#!">CGV</a>
+            <a class="text-white" href="#!">CGV</a>
           </li>
           <li>
-            <a href="#!">Mentions légales</a>
+            <a class="text-white" href="#!">Mentions légales</a>
           </li>
           <li>
-            <a href="#!">FAQ</a>
+            <a class="text-white" href="#!">FAQ</a>
           </li>
 				</ul>
 			</div>
 
       <div class="col-md-4 col-sm-12">
-				<h4 class="text"> Aide </h4>        
+				<h4 class="underline"> Aide </h4>        
         <ul class="list-unstyled">
           <li>
-            <a href="#!">Nous contacter</a>
+            <a class="text-white" href="#!">Nous contacter</a>
           </li>
           <li>
             <p> 49 Rue Smith 69002 Lyon, France </p>
@@ -47,7 +47,7 @@
     </div>
   </div>
   <div class="footer-copyright text-center mt-3">© 2020 Upcycling:
-    <a href="https://fr.wikipedia.org/wiki/Surcyclage"> Upcyclez et vous verrez</a>
+    <a class="text-white" href="https://fr.wikipedia.org/wiki/Surcyclage"> Upcyclez et vous verrez</a>
   </div>
 </footer>
 
