add images to items and card v2

--- a/lib/assets/stylesheets/style.css
+++ b/lib/assets/stylesheets/style.css
@@ -33,6 +33,14 @@
   text-align: center;
 }
 
+.pictures-items-lg {
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
 /*------ CAROUSEL ------*/
 
 .carousel-inner img {
