add margin bottom to div item_show

--- a/app/views/items/_item_show.html.erb
+++ b/app/views/items/_item_show.html.erb
@@ -1,4 +1,4 @@
-<div class="container row mt-5 align-items-center">
+<div class="container row mb-5 mt-5 align-items-center">
   <div class="col-sm d-flex align-items-center">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
