--- a/app/views/layouts/_categories_navbar.html.erb
+++ b/app/views/layouts/_categories_navbar.html.erb
@@ -1,3 +1,3 @@
-<li class="nav-item">
+<div class="nav-item">
   <%= link_to category.name, category_path(category.id), :class=>"nav-link " %>
-</li>
+</div>
