--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,22 +13,11 @@
  *= require bootstrap
  *= require style
  */
- /* body {
-  margin: 0;
-  padding: 0;
-  background: #250008;
-  font-family: sans-serif;
-} */
+
 .card {
- 
-  /* top: 50%;
-  left: 50%; */
-  /* transform: translate(-50%,-50%); */
-  width: 100%;
-  height: 530px;
+  width: 320px;
+  height: 480px;
   background: #000;
-  z-index: 1;
-  margin: 20px;
 }
 .card .image {
   width: 100%;
@@ -37,6 +26,7 @@
 }
 .card .image img {
   width: 100%;
+  height: 70%;
   transition: .5s;
 }
 .card:hover .image img {
@@ -44,6 +34,9 @@
   transform: translateX(30%);/*100%*/
 }
 .card .details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
   overflow: hidden;
   position: absolute;
   top: 0;
@@ -54,7 +47,6 @@
   transition: .5s;
   transform-origin: left;
   transform: perspective(2000px) rotateY(-90deg);
-  z-index: 2;
 }
 .card:hover .details {
   transform: perspective(2000px) rotateY(0deg);
@@ -65,53 +57,12 @@
   background: #fff;
   position: absolute;
   top: 50%;
+ 
   transform: translateY(-50%);
-  z-index: 2;
 }
-.card .details .center h1 {
-  margin: 0;
-  padding: 0;
-  color: #ff3636;
-  line-height: 20px;
-  font-size: 20px;
-  text-transform: uppercase;
-}
-.card .details .center h1 span {
-  font-size: 14px;
-  color: #262626;
-}
-.card .details .center p {
-  margin: 10px 0;
-  padding: 0;
-  color: #262626;
-}
-.card .details .center ul {
-  margin: 10px auto 0;
-  padding: 0;
-  display: table;
-}
-.card .details .center ul li {
-  list-style: none;
-  margin: 0 5px;
-  float: left;
-}
-.card .details .center ul li a {
-  display: block;
-  background: #262626;
-  color: #fff;
-  width: 30px;
-  height: 30px;
-  line-height: 30px;
-  text-align: center;
-  transform: .5s;
-}
-.card .details .center ul li a:hover {
-  background: #ff3636;
-}
-
 .description-content {
-  height: 110px;
-  
+  max-height: 40%;
+  text-align: center;
   overflow: hidden;
 }
 
