--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,11 +1,10 @@
-<div class="text-center mb-5 mt-3">
-  <h1><%= @category.name %></h1>
-</div>
-<div class="container card-custom-container">
-  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 justify-content-center">
+<%= render 'jumbotron_category', category: @category %>
+
+<div class="container">
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
     <% @category.items.each do |item| %>
      <% if !item.is_archived %>
-     <div class="text-center" id="grid-col-<%= item.id %>">
+     <div class="text-center col justify-content-center d-flex" id="grid-col-<%= item.id %>">
       <%= render 'items/card', item: item %>
       </div>
      <% end %> 
