--- a/lib/assets/stylesheets/style.css
+++ b/lib/assets/stylesheets/style.css
@@ -7,6 +7,7 @@ body {
   margin: 0 0 200px;
   /* bottom = footer height */
   padding-bottom: 25px;
+  background-color: whitesmoke; /* à changer par une texture sympa à stocker dans S3 si on a le temps... */
 }
 /*------- NAVBAR ------*/
 
@@ -39,6 +40,23 @@ body {
 
 #dropdownMenuButton {
   margin-right: 20px;
+}
+
+.shadow {
+  -webkit-box-shadow: 3px 3px 5px 6px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+  -moz-box-shadow:    3px 3px 5px 6px #ccc;  /* Firefox 3.5 - 3.6 */
+  box-shadow:         3px 3px 5px 6px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+}
+
+.letter-spacing {
+  letter-spacing: 0.35em;
+}
+.category-cell {
+  transition-property: background-color; /* Active la transition sur background-color */
+    transition-duration: 1s; /* La transition dure 1s */
+}
+.category-cell:hover {
+  background-color: #14ca61;
 }
 
 /*----- CONTAINERS -----*/
@@ -116,5 +134,59 @@ footer {
   margin: 200px 400px 0px 400px;
 }
 
+/*---- ITEM ----*/
+
+
+.card {
+  width: 320px;
+  height: 480px;
+  background: #000;
+}
+.card .image {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.card .image img {
+  width: 100%;
+  height: 70%;
+  transition: .5s;
+}
+.card:hover .image img {
+  opacity: .5;
+  transform: translateX(30%);/*100%*/
+}
+.card .details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 70%;/*100%*/
+  height: 100%;
+  background: #ffc107;
+  transition: .5s;
+  transform-origin: left;
+  transform: perspective(2000px) rotateY(-90deg);
+}
+.card:hover .details {
+  transform: perspective(2000px) rotateY(0deg);
+}
+.card .details .center {
+  padding: 20px;
+  text-align: center;
+  background: #fff;
+  position: absolute;
+  top: 50%;
+ 
+  transform: translateY(-50%);
+}
+.description-content {
+  max-height: 40%;
+  text-align: center;
+  overflow: hidden;
+}
 
 
