shops#show and shops#edit views now responsive and cards centered properly

--- a/app/views/shops/edit.html.erb
+++ b/app/views/shops/edit.html.erb
@@ -7,10 +7,10 @@
   <div class="row justify-content-center mb-5 mt-1" >
     <%= link_to "Ajouter un produit à ma boutique", new_item_path(:shop_id => @shop.id), :class=>"fas fa-store" %>
   </div>
-  <div class="row row-cols-1 row-cols-md-3 justify-content-center">
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
     <% @shop.items.each do |item| %>
       <% if !item.is_archived %>
-        <div class="text-center" id="grid-col-<%= item.id %>">
+        <div class="text-center justify-content-center d-flex flex-column align-items-center mb-3" id="grid-col-<%= item.id %>">
           <%= render 'items/card', item: item %>
           <div class="column justify-content-center">
             <%= link_to "Modifier le produit", edit_item_path(item.id), :class => "btn btn-info"%>
