--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -7,10 +7,10 @@
   <div class="row justify-content-center mb-5 mt-1" >
    <%= link_to "Editer ma boutique", edit_shop_path, :class=>"fas fa-store" %>
   </div>
-  <div class="row row-cols-1 row-cols-md-3 justify-content-center">
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
     <% @shop.items.each do |item| %>
      <% if !item.is_archived %>
-      <div class="text-center" id="grid-col-<%= item.id %>">
+      <div class="text-center col justify-content-center d-flex" id="grid-col-<%= item.id %>">
         <%= render 'items/card', item: item %>
       </div>
      <% end %>
