--- a/lib/assets/stylesheets/style.css
+++ b/lib/assets/stylesheets/style.css
@@ -164,9 +164,27 @@ footer {
   height: 70%;
   transition: .5s;
 }
+.card .image h3 {
+  width: 100%;
+  height: 70%;
+  transition: .5s;
+}
+.card:hover .image h3 {
+  opacity: .5;
+  transform: translateX(70%);/*100%*/
+}
+.card .image div {
+  width: 100%;
+  height: 70%;
+  transition: .5s;
+}
+.card:hover .image div {
+  opacity: .5;
+  transform: translateX(70%);/*100%*/
+}
 .card:hover .image img {
   opacity: .5;
-  transform: translateX(30%);/*100%*/
+  transform: translateX(70%);/*100%*/
 }
 .card .details {
   display: flex;
