Added ajax to plus and minus buttons

--- a/app/views/items/_plus_minus_cart_quantity.html.erb
+++ b/app/views/items/_plus_minus_cart_quantity.html.erb
@@ -1,6 +1,6 @@
 <div class="d-flex flex-row justify-content-center">
   <% if cart_item.cart_quantity >= 0 %>
-    <%= button_to cart_path, :method => :patch, :class => "button is-link", params: {operation: "remove", item_id: cart_item.item.id } do %>
+    <%= button_to cart_path, :method => :patch, :class => "button is-link", params: {operation: "remove", item_id: cart_item.item.id }, remote: true do %>
       <span class="icon">
         <i class="fas fa-minus-square "></i>
       </span>
@@ -10,7 +10,7 @@
     <%= cart_item.cart_quantity %>
   </div>
   <% if cart_item.cart_quantity < cart_item.item.available_quantity %>
-    <%= button_to cart_path, :method => :patch, :class => "button is-link", params: {operation: "add", item_id: cart_item.item.id } do %>
+    <%= button_to cart_path, :method => :patch, :class => "button is-link", params: {operation: "add", item_id: cart_item.item.id }, remote: true do %>
       <span class="icon">
         <i class="fas fa-plus-square"></i>
       </span>
