--- a/app/views/makers/new.html.erb
+++ b/app/views/makers/new.html.erb
@@ -2,15 +2,66 @@
 <h2 class= "p-4 text-center">Ouvrir un compte artisan</h2>
 
  <%= form_with url: maker_new_maker_email_path(current_user.id) do |f| %>
-  <div class="field m-3">
-    <%= f.label :prénom %>
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "prénom", class: "form-control" %>
-  </div>
+ <div class="row">
+   <div class="col-6">
+     <%= f.label :prénom %>
+   </div>
+   <div class="col-6">
+     <%= f.label :nom %>
+   </div>
+ </div>
+ <div class="row">
+   <div class="col-6">
+     <%= f.text_field :first_name, class: "form-control", value: (@user.customer.address.first_name if @user.customer.address) %>
+   </div>
+   <div class="col-6">
+     <%= f.text_field :last_name, class: "form-control",  value: (@user.customer.address.last_name if @user.customer.address) %>
+   </div>
+ </div>
 
-  <div class="field m-3">
-    <%= f.label :nom %>
-    <%= f.text_field :last_name, class: "form-control" %>
-  </div>
+ <%= f.label :complément %>
+ <%= f.text_field :address_line_2, class: "form-control", value: (@user.customer.address.address_line_2 if @user.customer.address) %>
+
+ <div class="row">
+   <div class="col-3">
+     <%= f.label :n° %>
+   </div>
+   <div class="col-9">
+     <%= f.label :adresse %>
+   </div>
+ </div>
+ <div class="row">
+   <div class="col-3">
+     <%= f.text_field :street_number, class: "form-control", value: (@user.customer.address.street_number if @user.customer.address) %>
+   </div>
+   <div class="col-9">
+     <%= f.text_field :address_line_1, class: "form-control", value: (@user.customer.address.address_line_1 if @user.customer.address) %>
+   </div>
+ </div>
+
+ <div class="row">
+   <div class="col-6">
+     <%= f.label :code_postal %>
+   </div>
+   <div class="col-6">
+     <%= f.label :ville %>
+   </div>
+ </div>
+ <div class="row">
+   <div class="col-6">
+     <%= f.text_field :zip_code, class: "form-control", value: (@user.customer.address.zip_code if @user.customer.address) %>
+   </div>
+   <div class="col-6">
+     <%= f.text_field :city, class: "form-control", value: (@user.customer.address.city if @user.customer.address) %>
+   </div>
+ </div>
+
+ <%= f.label :site_web %>
+ <%= f.text_field :website, class: "form-control" %>
+
+ <%= f.label :description %>
+ <%= f.text_area :description, class: "form-control" %>
+
 
   <div class="actions mt-5">
     <%= f.submit "Valider", class: "btn btn-lg btn-info btn-block" %>
