--- a/app/views/user_mailer/become_maker_email_confirmation.html.erb
+++ b/app/views/user_mailer/become_maker_email_confirmation.html.erb
@@ -4,9 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Salut et merci pour ta demande !</h1>
+    <h1>Salut <%= @infos_user[:first_name] %> et merci pour ta demande !</h1>
     <p>
-      Tu as fait une demande pour ouvrir un compte artisan sur notre compte avec cet email : <%= @user.email %>.
+      Tu as fait une demande pour ouvrir un compte artisan sur notre compte avec cet email : <%= @infos_user[:email] %>.
     </p>
     <p>
       Nous tacherons de donner une réponse à ta demande dans les plus brefs délais !</a>.
