added ajax to button_to_add_to_cart

--- a/app/views/items/_item_show.html.erb
+++ b/app/views/items/_item_show.html.erb
@@ -50,7 +50,7 @@
 
        <% if user_signed_in? %>
       <% if is_item_quantity_sufficient_to_add_another_to_cart(item.id) == true %>
-         <%= button_to "Ajouter au panier", cart_path(current_user.customer.cart.id), :method => :put, :class => "btn btn-primary btn-lg btn-block", params: {item_id: item.id, operation: "add"} %>
+         <%= button_to "Ajouter au panier", cart_path(current_user.customer.cart.id), :method => :put, :class => "btn btn-primary btn-lg btn-block", params: {item_id: item.id, operation: "add"}, remote: true %>
       <% else %>
           <button class="btn btn-warning btn-lg" disabled>Epuisé</button>
       <% end %>
