edit homepage css

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron">
-  <div class="container-jumbo">
-    <p class="princip">Contribuez à la consomation responsable durable locale</p>
-    <button type="button" class="btn btn-success btn-lg">Nos artisans(lien vers map)</button>
-  </div>
+  <h3>Contribuez à la consomation responsable durable locale</h3> 
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  </p>
 </div>
 
