--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -8,9 +8,8 @@
         <div class="card-maker">
           <div class="card-body d-flex align-items-center flex-column">
             <h5 class="card-title"><%= shop.name %></h5>
-            <img src="https://unsplash.com/photos/rdLERs3ZGgQ">
             <p class="card-text"></p>
-            <p class="card-text"><small class="text-muted"> Description</small></p>
+            <p class="card-text"><small class="text-muted"> <%= shop.maker.description %></small></p>
             <%= link_to "Voir plus", shop_path(shop.id), :class =>"btn btn-primary" %>
           </div>
       </div>
