--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,7 +1,8 @@
-<div class="jumbotron">
+<div class="jumbotron1">
+  <img src="https://images.unsplash.com/photo-1500829243541-74b677fecc30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1355&q=80" class="background-image" alt="...">
+  <div class="background-image-overlay">
   <h3>Contribuez à la consomation responsable durable locale</h3> 
-  <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-  </p>
+    <a class="btn btn-success btn-lg" href="#" role="button">Voir plus</a> 
+</div>
 </div>
 
