--- a/lib/assets/stylesheets/style.css
+++ b/lib/assets/stylesheets/style.css
@@ -80,14 +80,15 @@ body {
 
 /*-----JUMBOTRON-----*/
 
-.jumbotron {
-  background-image: url('0.jpg') no-repeat center center;;
+.jumbotron1 {
   height: 88vh;
   display: flex;
   flex-direction: column;             
   justify-content: center;
   align-items: center;
-  padding-top: 400px;
+  color: #EFEFEF;
+  font-family: 'lato';
+  font-size: x-large;
 }
 
 body {
@@ -95,7 +96,19 @@ body {
 }
 
 .background-image{
-  background-attachment:fixed;
+  height: 950px;
+  width: 100%;
+  display: flex;
+}
+
+.background-image-overlay {
+  position: absolute;
+  align-self: flex;
+  padding-top: 200px;
+  display: flex;
+  flex-direction: column;             
+ 
+ 
 }
 
 .jumbotron-category {
@@ -231,22 +244,26 @@ footer {
 
 .card-maker {
   width: 320px;
-  height: 480px;
+  height: 520px;
   background-color: rgba(187, 187, 187, 0.233);
   border-radius: 5px;
-  opacity: 0.8;
   margin: 50px 30px 50px 30px;
   box-shadow: 0 5px 10px -14px rgba(0,0,0,0.25);
   flex-direction: column;
 }
 
-.card-maker:hover {
+.card-maker:hover{
   max-width: none;
-  opacity: 1;
-  transition-property: width;
-  transition-duration: 2s;
-  transition-timing-function: linear;
-  transition-delay: 1s;
+  box-shadow: 0px 0px 15px #4646467a;
+  transition: all 100ms ease-in;
+  transform: scale(1.05);
+}
+
+.card-maker .btn:hover{
+  max-width: none;
+  box-shadow: 0px 0px 15px #4646467a;
+  transition: all 100ms ease-in;
+  transform: scale(1.05);
 }
 
 hr {
