--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -45,7 +45,7 @@
    
   </div>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#categoriesSection" aria-controls="categoriesSection" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <i class="fa fa-navicon" style="color:#1e185f; font-size:28px;"></i>
   </button>
   </div>
 </nav>
