--- a/lib/assets/stylesheets/style.css
+++ b/lib/assets/stylesheets/style.css
@@ -12,11 +12,9 @@ body {
 /*------- NAVBAR ------*/
 
 .navbar {
-  background-color:#EFEFEF;
-}
-
-.navbar-logo:hover {
- color: #14ca61;
+  /* background-color:#EFEFEF; */
+  background: url('wood.jpg') repeat top left;
+  opacity:0.9;
 }
 
 .logo {
@@ -43,21 +41,42 @@ body {
   margin-right: 20px;
 }
 
-.shadow {
-  -webkit-box-shadow: 3px 3px 5px 6px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-  -moz-box-shadow:    3px 3px 5px 6px #ccc;  /* Firefox 3.5 - 3.6 */
-  box-shadow:         3px 3px 5px 6px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
-}
+/* .shadow {
+  -webkit-box-shadow: 3px 3px 5px 6px #ccc;  
+  -moz-box-shadow:    3px 3px 5px 6px #ccc; 
+  box-shadow:         3px 3px 5px 6px #ccc;
+} */
 
 .letter-spacing {
   letter-spacing: 0.35em;
+  
 }
 .category-cell {
   transition-property: background-color; /* Active la transition sur background-color */
-    transition-duration: 1s; /* La transition dure 1s */
+  transition-duration: 1s; /* La transition dure 1s */
+  font-weight: 900;
+  color: #14ca61 !important;
+  
+}
+.category-cell a {
+  color: #14ca61 !important;
+  filter: drop-shadow(.05em .05em orange);
+  text-shadow: 0px 1px, 1px 0px, 1px 1px;
+}
+.category-cell a:hover {
+  color: #1e185f !important;
+  
 }
 .category-cell:hover {
   background-color: #14ca61;
+  opacity: 150%;
+}
+.navbar-toggler-icon {
+  color:  #1e185f;
+}
+
+.navbar-toggler {
+  border: none;
 }
 
 /*----- CONTAINERS -----*/
@@ -119,6 +138,7 @@ body {
   background: #242134; 
   background: -webkit-linear-gradient(to right, #9E9AB4, #242134);
   background: linear-gradient(to right, #9E9AB4, #242134);
+  
 }
  
 .hd1{
@@ -282,3 +302,20 @@ hr {
   width: 1200px;
  
 }
+
+body::-webkit-scrollbar {
+  width: 1em;
+}
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+.scrollable-element {
+  scrollbar-color: red;
+}
+
