resized footer titles

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <div id="div-adjust" class="container container-footer">
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <h4 class="underline full-title">Réseaux sociaux</h4>
+        <h4 class="underline footer-font-size">Réseaux sociaux</h4>
         <ul class="list-unstyled">
           <li>
             <i class="fab fa-facebook-square"></i>
@@ -16,7 +16,7 @@
       </div>
 
       <div class="col-md-4 col-sm-12">
-				<h4 class="underline"> A propos </h4>
+				<h4 class="underline footer-font-size"> A propos </h4>
 				<ul class="list-unstyled">
           <li>
             <a class="text-white" href="#!">Devenir créateur</a>
@@ -34,7 +34,7 @@
 			</div>
 
       <div class="col-md-4 col-sm-12">
-				<h4 class="underline"> Aide </h4>        
+				<h4 class="underline footer-font-size"> Aide </h4>        
         <ul class="list-unstyled">
           <li>
             <a class="text-white" href="#!">Nous contacter</a>
