edit css button homepage

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,7 +2,9 @@
   <img src="https://images.unsplash.com/photo-1500829243541-74b677fecc30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1355&q=80" class="background-image" alt="...">
   <div class="background-image-overlay">
   <h3>Contribuez à la consomation responsable durable locale</h3> 
-    <a class="btn btn-success btn-lg" href="#" role="button">Voir plus</a> 
+</div>
+<div class="background-button-overlay">
+  <%= link_to "VOIR NOS ARTISANS", shops_path, :class=>"btn btn-success btn-lg" %> 
 </div>
 </div>
 
