--- a/app/views/layouts/_categories.html.erb
+++ b/app/views/layouts/_categories.html.erb
@@ -1,3 +1,3 @@
-<div class="justify-content-center shadow letter-spacing text-uppercase category-cell nav-item">
+<div class="justify-content-center shadow letter-spacing text-uppercase category-cell nav-item pl-3 pr-3">
   <%= link_to category.name, category_path(category.id), :class=>"nav-link " %>
 </div>
