--- a/app/views/makers/new.html.erb
+++ b/app/views/makers/new.html.erb
@@ -19,22 +19,13 @@
    </div>
   </div>
 
-  <%= f.label :complément %>
-  <%= f.text_field :address_line_2, class: "form-control", value: (@user.customer.address.address_line_2 if @user.customer.address) %>
-
   <div class="row">
-   <div class="col-3">
-     <%= f.label :n° %>
-   </div>
-   <div class="col-9">
+   <div class="col">
      <%= f.label :adresse %>
    </div>
   </div>
   <div class="row">
-   <div class="col-3">
-     <%= f.text_field :street_number, class: "form-control", value: (@user.customer.address.street_number if @user.customer.address) %>
-   </div>
-   <div class="col-9">
+   <div class="col">
      <%= f.text_field :address_line_1, class: "form-control", value: (@user.customer.address.address_line_1 if @user.customer.address) %>
    </div>
   </div>
@@ -55,6 +46,10 @@
      <%= f.text_field :city, class: "form-control", value: (@user.customer.address.city if @user.customer.address) %>
    </div>
   </div>
+
+  <%= f.label :address_line_2, 'Complément d\'adresse (optionnel)' %>
+  <%= f.text_field :address_line_2, class: "form-control", value: (@user.customer.address.address_line_2 if @user.customer.address) %>
+
 
   <%= f.label :site_web %>
   <%= f.text_field :website, class: "form-control" %>
